@@ -6,12 +6,12 @@ import com.service.ConfService;
 import org.elasticsearch.common.network.NetworkService;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.discovery.zen.UnicastHostsProvider;
+import org.elasticsearch.discovery.SeedHostsProvider;
 import org.elasticsearch.plugins.DiscoveryPlugin;
 import org.elasticsearch.plugins.Plugin;
+import org.elasticsearch.plugins.ReloadablePlugin;
 import org.elasticsearch.transport.TransportService;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -20,7 +20,7 @@ import java.util.function.Supplier;
 /**
  * @author xhkyyy
  */
-public class ApolloConfBasedDiscoveryPlugin extends Plugin implements DiscoveryPlugin {
+public class ApolloConfBasedDiscoveryPlugin extends Plugin implements DiscoveryPlugin, ReloadablePlugin {
 
     private Settings settings;
 
@@ -32,13 +32,11 @@ public class ApolloConfBasedDiscoveryPlugin extends Plugin implements DiscoveryP
 
     @Override
     public List<Setting<?>> getSettings() {
-        return Collections.unmodifiableList(
-                Arrays.asList(
-                        ConfUtil.CONF_APOLLO_APP_ID_SETTING,
-                        ConfUtil.CONF_APOLLO_META_SETTING,
-                        ConfUtil.CONF_APOLLO_NS_SETTING,
-                        ConfUtil.CONF_APOLLO_KEY_SETTING
-                )
+        return List.of(
+                ConfUtil.CONF_APOLLO_APP_ID_SETTING,
+                ConfUtil.CONF_APOLLO_META_SETTING,
+                ConfUtil.CONF_APOLLO_NS_SETTING,
+                ConfUtil.CONF_APOLLO_KEY_SETTING
         );
     }
 
@@ -47,11 +45,14 @@ public class ApolloConfBasedDiscoveryPlugin extends Plugin implements DiscoveryP
     }
 
     @Override
-    public Map<String, Supplier<UnicastHostsProvider>> getZenHostsProviders(
-            TransportService transportService, NetworkService networkService
-    ) {
+    public void reload(Settings settings) throws Exception {
+        // TODO
+    }
+
+    @Override
+    public Map<String, Supplier<SeedHostsProvider>> getSeedHostProviders(TransportService transportService, NetworkService networkService) {
         return Collections.singletonMap(
-                CONF_KEY, () -> new ApolloConfBasedSeedHostsProvider(settings, createHttpService())
+                CONF_KEY, () -> new ApolloConfBasedSeedHostsProvider(createHttpService())
         );
     }
 }
